plugins {
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'java'
}

group = 'com.OhRyue'
version = '0.0.1-SNAPSHOT'
java { toolchain { languageVersion = JavaLanguageVersion.of(17) } }

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.1.3'

    // Swagger (springdoc, Spring Boot 3.x용)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // OpenFeign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.4'

    // Resilience4j
    // implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'

    // Spring Cloud CircuitBreaker with Resilience4j (추상화 레이어)
    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:3.1.3'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // DB
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter'         // (선택)
    testImplementation 'io.projectreactor:reactor-test'                    // (선택)
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.test { useJUnitPlatform() }
